test/errors/dotExprInAs.compopts
--detailed-errors # dotExprInAs-detailed.good
--no-detailed-errors # dotExprInAs-brief.good
